# src/gen/swagger/com/sonicle/webtop/tasks/swagger/v2/api/EasApi.java
@@ -1,9 +1,9 @@
 package com.sonicle.webtop.tasks.swagger.v2.api;
 
-import com.sonicle.webtop.tasks.swagger.v2.model.ApiSyncFolder;
-import com.sonicle.webtop.tasks.swagger.v2.model.ApiSyncTask;
-import com.sonicle.webtop.tasks.swagger.v2.model.ApiSyncTaskStat;
-import com.sonicle.webtop.tasks.swagger.v2.model.ApiSyncTaskUpdate;
+import com.sonicle.webtop.tasks.swagger.v2.model.ApiEasSyncFolder;
+import com.sonicle.webtop.tasks.swagger.v2.model.ApiEasSyncTask;
+import com.sonicle.webtop.tasks.swagger.v2.model.ApiEasSyncTaskStat;
+import com.sonicle.webtop.tasks.swagger.v2.model.ApiEasSyncTaskUpdate;
 
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
@@ -18,23 +18,23 @@ import javax.validation.Valid;
 
 @Path("/eas/folders")
 @Api(description = "the eas API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2024-10-14T18:05:51.753+02:00[Europe/Berlin]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2024-10-21T12:01:13.376+02:00[Europe/Berlin]")
 public abstract class EasApi extends com.sonicle.webtop.core.sdk.BaseRestApiResource {
 
     @POST
     @Path("/{folderId}/messages")
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
-    @ApiOperation(value = "Adds a message", notes = "Creates new Task into specified Category.", response = ApiSyncTaskStat.class, authorizations = {
+    @ApiOperation(value = "Adds a message", notes = "Creates new Task into specified Category.", response = ApiEasSyncTaskStat.class, authorizations = {
         
         @Authorization(value = "auth-basic"),
         
         @Authorization(value = "auth-bearer")
-         }, tags={ "eas-messages" })
+         }, tags={ "eas" })
     @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "Success", response = ApiSyncTaskStat.class)
+        @ApiResponse(code = 201, message = "Success", response = ApiEasSyncTaskStat.class)
     })
-    public Response addMessage(@PathParam("folderId") @ApiParam("Folder ID") String folderId,@Valid @NotNull ApiSyncTaskUpdate body) {
+    public Response addMessage(@PathParam("folderId") @ApiParam("Folder ID") String folderId,@Valid @NotNull ApiEasSyncTaskUpdate body) {
         return Response.ok().entity("magic!").build();
     }
 
@@ -45,7 +45,7 @@ public abstract class EasApi extends com.sonicle.webtop.core.sdk.BaseRestApiReso
         @Authorization(value = "auth-basic"),
         
         @Authorization(value = "auth-bearer")
-         }, tags={ "eas-messages" })
+         }, tags={ "eas" })
     @ApiResponses(value = { 
         @ApiResponse(code = 204, message = "Success", response = Void.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
@@ -57,14 +57,14 @@ public abstract class EasApi extends com.sonicle.webtop.core.sdk.BaseRestApiReso
 
     @GET
     @Produces({ "application/json" })
-    @ApiOperation(value = "List all folders", notes = "Returns a list of available Categories with enabled synchronization.", response = ApiSyncFolder.class, responseContainer = "List", authorizations = {
+    @ApiOperation(value = "List all folders", notes = "Returns a list of available Categories with enabled synchronization.", response = ApiEasSyncFolder.class, responseContainer = "List", authorizations = {
         
         @Authorization(value = "auth-basic"),
         
         @Authorization(value = "auth-bearer")
-         }, tags={ "eas-folders" })
+         }, tags={ "eas" })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = ApiSyncFolder.class, responseContainer = "List")
+        @ApiResponse(code = 200, message = "Success", response = ApiEasSyncFolder.class, responseContainer = "List")
     })
     public Response getFolders() {
         return Response.ok().entity("magic!").build();
@@ -73,14 +73,14 @@ public abstract class EasApi extends com.sonicle.webtop.core.sdk.BaseRestApiReso
     @GET
     @Path("/{folderId}/messages/{id}")
     @Produces({ "application/json" })
-    @ApiOperation(value = "Get a single message", notes = "Gets the specified Task.", response = ApiSyncTask.class, authorizations = {
+    @ApiOperation(value = "Get a single message", notes = "Gets the specified Task.", response = ApiEasSyncTask.class, authorizations = {
         
         @Authorization(value = "auth-basic"),
         
         @Authorization(value = "auth-bearer")
-         }, tags={ "eas-messages" })
+         }, tags={ "eas" })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = ApiSyncTask.class),
+        @ApiResponse(code = 200, message = "Success", response = ApiEasSyncTask.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Message not found", response = Void.class)
     })
@@ -91,14 +91,14 @@ public abstract class EasApi extends com.sonicle.webtop.core.sdk.BaseRestApiReso
     @GET
     @Path("/{folderId}/messages-stats")
     @Produces({ "application/json" })
-    @ApiOperation(value = "Gets sync messages data for a folder", notes = "Returns sync informations for the specified Category.", response = ApiSyncTaskStat.class, responseContainer = "List", authorizations = {
+    @ApiOperation(value = "Gets sync messages data for a folder", notes = "Returns sync informations for the specified Category.", response = ApiEasSyncTaskStat.class, responseContainer = "List", authorizations = {
         
         @Authorization(value = "auth-basic"),
         
         @Authorization(value = "auth-bearer")
-         }, tags={ "eas-messages" })
+         }, tags={ "eas" })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = ApiSyncTaskStat.class, responseContainer = "List"),
+        @ApiResponse(code = 200, message = "Success", response = ApiEasSyncTaskStat.class, responseContainer = "List"),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class)
     })
     public Response getMessagesStats(@PathParam("folderId") @ApiParam("Folder ID") String folderId,@QueryParam("cutoffDate")  @ApiParam("Cut-off date (ISO date/time YYYYMMDD&#39;T&#39;HHMMSS&#39;Z&#39;)")  String cutoffDate) {
@@ -109,18 +109,18 @@ public abstract class EasApi extends com.sonicle.webtop.core.sdk.BaseRestApiReso
     @Path("/{folderId}/messages/{id}")
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
-    @ApiOperation(value = "Updates a message", notes = "Updates the specified Task.", response = ApiSyncTaskStat.class, authorizations = {
+    @ApiOperation(value = "Updates a message", notes = "Updates the specified Task.", response = ApiEasSyncTaskStat.class, authorizations = {
         
         @Authorization(value = "auth-basic"),
         
         @Authorization(value = "auth-bearer")
-         }, tags={ "eas-messages" })
+         }, tags={ "eas" })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success", response = ApiSyncTaskStat.class),
+        @ApiResponse(code = 200, message = "Success", response = ApiEasSyncTaskStat.class),
         @ApiResponse(code = 400, message = "Invalid parameter", response = Void.class),
         @ApiResponse(code = 404, message = "Message not found", response = Void.class)
     })
-    public Response updateMessage(@PathParam("folderId") @ApiParam("Folder ID") String folderId,@PathParam("id") @ApiParam("Message ID") String id,@Valid @NotNull ApiSyncTaskUpdate body) {
+    public Response updateMessage(@PathParam("folderId") @ApiParam("Folder ID") String folderId,@PathParam("id") @ApiParam("Message ID") String id,@Valid @NotNull ApiEasSyncTaskUpdate body) {
         return Response.ok().entity("magic!").build();
     }
 }
